Fixed the wider than screen page size on mobile devices by adding a wrapper.

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -3,9 +3,6 @@
 /**
  * Styling Rules for content types
  */
-body {
-    overflow-x: hidden; // Prevents a wider than screen width body on smaller screen sizes, which results in a horizontal scrollbar.
-} 
 
 /* Content Wrappers
 ----------------------*/
