--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -19,3 +19,10 @@
         padding: 0;
     }
 }
+
+/**
+ * Prevents a wider than screen width body on smaller screen sizes, which results in a horizontal scrollbar and unwanted behaviour on mobile devices.
+ */
+.wrapper {
+    overflow: hidden;
+}
